--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    buildFeatures{
-        dataBinding true
+    buildFeatures {
+        viewBinding = true
+        dataBinding = true
     }
 
 }
